--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 }
 
 .banner{
-    margin-top: 5px;
+    margin-top: 2vh;
     border: 3px solid #2285d4;
     border-radius: 35px;
 }
@@ -38,7 +38,6 @@ body{
     text-align: center;
 }
 
-
 img {
     max-width: 100%;
     height: auto;
@@ -46,19 +45,40 @@ img {
     margin-top:2%;
 }
 
+@media only screen and (min-width: 769px) {
 /* For desktop: */
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+
+    .Lfloatleft{
+        float: left;
+    }
+
+    .Lfloatright{
+        float: right;
+    }
+
+    .navbtn{
+        margin-top:4%;
+        font-size:2vw;
+    }
+
+    .detail{
+        margin-top: 5%;
+        margin-right: 10vw;
+        text-align: left;
+    }
+}
 
 /* @media only screen and (max-width: 768px) {
     For mobile phones:
